Bug 273462 - using spellcheck from ktextedit popup menu may cause duplicate strings
Summary: using spellcheck from ktextedit popup menu may cause duplicate strings
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-17 05:39 UTC by
Modified: 2012-03-01 02:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2011-05-17 05:39:57 UTC
Version:           0.1 (using Devel) 
OS:                Linux

When editing a .po file, having right click option 'Auto Spell Check' disabled, then right click and hit option 'Check Spelling...' it appears a small window, now hit the button 'Cancel' and lokalize will duplicate the string your editing.

However it appears only in the window 'Translation Units', it doesnt appear on the fly in the editing field.


Reproducible: Always




OS: Linux (x86_64) release 2.6.36.2-desktop-2mnb
Compiler: gcc
Comment 1 Nick Shaforostoff 2012-03-01 02:28:27 UTC
SVN commit 1282945 by shaforo:


add hack to workaround strange ktextedit internal spellchecking behaviour



 M  +9 -0      xlifftextedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1282945