BUG: 273462

add hack to workaround strange ktextedit internal spellchecking behaviour


svn path=/branches/KDE/4.8/kdesdk/lokalize/; revision=1282945